<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#64A2B6"
    android:gravity="center|fill_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/circle"
        android:padding="12dp"
        android:text="@string/str_num"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/tvQuestionNumSlashNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/str_question1of10"
        android:textColor="#414C50"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/str_spoersmoel"
        android:textAlignment="center"
        android:textColor="#414C50"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="298dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:paddingTop="15dp"
            android:paddingBottom="15dp" />

        <RadioGroup
            android:id="@+id/rbAnswersGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="4"
            android:paddingStart="75dp"
            android:paddingTop="15dp"
            android:paddingEnd="70dp"
            android:paddingBottom="20dp">

            <RadioButton
                android:id="@+id/rbAnswer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/str_question1"
                android:textAlignment="viewStart"
                android:textColor="#3D4240" />

            <RadioButton
                android:id="@+id/rbAnswer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_question1"
                android:textAlignment="viewStart"
                android:textColor="#3D4240" />

            <RadioButton
                android:id="@+id/rbAnswer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_question1"
                android:textAlignment="viewStart"
                android:textColor="#3D4240" />

            <RadioButton
                android:id="@+id/rbAnswer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_question1"
                android:textAlignment="viewStart"
                android:textColor="#3D4240" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonForward"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginEnd="0dp"
            android:layout_weight=" 1"
            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
            android:paddingTop="15dp"
            android:paddingBottom="15dp" />

    </LinearLayout>

</LinearLayout>